--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 
 
   <!-- Other sections go here -->
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
