Updated 8/7 for testing!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,52 @@
     </div>
   </header>
 
+  <section id="services">
+    <h2>Our Services</h2>
+    <div class="services-container">
+      <div class="service-card">
+        <div class="service-card-inner">
+          <div class="service-card-front">
+            <h3>WEDDINGS</h3>
+          </div>
+          <div class="service-card-back">
+            <p>We provide comprehensive wedding planning services, from venue selection to the perfect décor.</p>
+          </div>
+        </div>
+      </div>
+      <div class="service-card">
+        <div class="service-card-inner">
+          <div class="service-card-front">
+            <h3>RENTALS</h3>
+          </div>
+          <div class="service-card-back">
+            <p>Our rental services include tables, chairs, and other event essentials to make your occasion memorable.</p>
+          </div>
+        </div>
+      </div>
+      <div class="service-card">
+        <div class="service-card-inner">
+          <div class="service-card-front">
+            <h3>PARTIES</h3>
+          </div>
+          <div class="service-card-back">
+            <p>From birthdays to corporate events, we plan parties that will leave a lasting impression on your guests.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
+  <section id="portfolio">
+    <h2>Our Portfolio</h2>
+    <div class="portfolio-container">
+      <div class="slider">
+        <div class="slides" id="slides"></div>
+      </div>
+      <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+      <button class="next" onclick="plusSlides(1)">&#10095;</button>
+    </div>
+  </section>
 
 
 
