--- a/index.html
+++ b/index.html
@@ -54,16 +54,13 @@
     </div>
   </section>
   
-  <section id="portfolio">
-    <h2>Our Portfolio</h2>
-    <div class="portfolio-container">
-      <div class="slider">
-        <div class="slides" id="slides"></div>
-      </div>
-      <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
-      <button class="next" onclick="plusSlides(1)">&#10095;</button>
+  <div class="container">
+    <div id="slides" class="slides-container">
+      <!-- Images will be dynamically loaded here -->
+      <div class="nav-button prev" onclick="plusSlides(-1)">&#10094;</div>
+      <div class="nav-button next" onclick="plusSlides(1)">&#10095;</div>
     </div>
-  </section>
+  </div>
 
 
 
