--- a/index.html
+++ b/index.html
@@ -62,6 +62,27 @@
     </div>
   </div>
 
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form id="contact-form" action="send_contact.php" method="post">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="subject">Subject</label>
+            <input type="text" id="subject" name="subject" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required></textarea>
+        </div>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+
+
+
   <!-- Other sections go here -->
   <script src="scripts.js"></script>
 </body>
