--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
 </head>
 
 <body>
+
+  <nav class="navbar">
+    <div class="nav-left">
+      <a href="tel:+1234567890" class="call-button">Call Us: +1 (234) 567-890</a>
+    </div>
+    <div class="nav-right">
+      <div class="menu-toggle">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <ul class="dropdown-menu">
+        <li><a href="#services">Our Services</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+      </ul>
+    </div>
+  </nav>
+
   <header class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
