Updated with Footer 8/8

--- a/index.html
+++ b/index.html
@@ -100,9 +100,41 @@
     </form>
 </section>
 
+<footer>
+  <div class="footer-content">
+    <div class="footer-section about">
+      <h2>About Us</h2>
+      <p>
+        Bell of the Ball is dedicated to creating unforgettable events with style and elegance. 
+        We handle everything from weddings to corporate events, ensuring a perfect experience every time.
+      </p>
+    </div>
+
+    <div class="footer-section contact">
+      <h2>Contact Us</h2>
+      <p>Email: contact@belloftheball.com</p>
+      <p>Phone: (123) 456-7890</p>
+      <p>Address: 123 Event Planning St, City, State</p>
+    </div>
+
+    <div class="footer-section social">
+      <h2>Follow Us</h2>
+      <a href="https://www.facebook.com/yourpage" target="_blank"><img src="assets/facebook-icon.png" alt="Facebook"></a>
+      <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
+      <a href="https://www.yelp.com/biz/yourbusiness" target="_blank"><img src="assets/yelp-icon.png" alt="Yelp"></a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    &copy; 2024 Bell of the Ball | All Rights Reserved
+  </div>
+</footer>
 
 
-  <!-- Other sections go here -->
-  <script src="scripts.js"></script>
+
+
+
+<!-- Other sections go here -->
+<script src="scripts.js"></script>
 </body>
 </html>
