Updated 9/4, Website basically complete

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="bar"></div>
       </div>
       <ul class="dropdown-menu">
-        <li><a href="#services">Our Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="services.html">Our Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
       </ul>
     </div>
   </nav>
@@ -33,64 +33,9 @@
     <div class="hero-content">
       <h1 id="business-name"></h1>
       <p>Creating unforgettable moments with style and elegance</p>
-      <a href="#services" class="cta-button">Learn More</a>
+      <a href="services.html" class="cta-button">Learn More</a>
     </div>
   </header>
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="services-container">
-      <div class="service-card">
-        <div class="service-card-inner">
-          <div class="service-card-front">
-            <h3>WEDDINGS</h3>
-          </div>
-          <div class="service-card-back">
-            <p>We provide comprehensive wedding planning services, from venue selection to the perfect décor.</p>
-          </div>
-        </div>
-      </div>
-      <div class="service-card">
-        <div class="service-card-inner">
-          <div class="service-card-front">
-            <h3>RENTALS</h3>
-          </div>
-          <div class="service-card-back">
-            <p>Our rental services include tables, chairs, and other event essentials to make your occasion memorable.</p>
-          </div>
-        </div>
-      </div>
-      <div class="service-card">
-        <div class="service-card-inner">
-          <div class="service-card-front">
-            <h3>PARTIES</h3>
-          </div>
-          <div class="service-card-back">
-            <p>From birthdays to corporate events, we plan parties that will leave a lasting impression on your guests.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form id="contact-form" action="send_contact.php" method="post">
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="subject">Subject</label>
-            <input type="text" id="subject" name="subject" required>
-        </div>
-        <div class="form-group">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
-        </div>
-        <button type="submit">Send Message</button>
-    </form>
-</section>
 
 <footer>
   <div class="footer-content">
@@ -104,9 +49,9 @@
 
     <div class="footer-section contact">
       <h2>Contact Us</h2>
-      <p>Email: contact@belloftheball.com</p>
-      <p>Phone: (123) 456-7890</p>
-      <p>Address: 123 Event Planning St, City, State</p>
+      <p>Email: belloftheballinc@gmail.com</p>
+      <p>Phone: +1 (775) 203-4065</p>
+      <p>Address: 42 Arndell Way, Sparks NV</p>
     </div>
 
     <div class="footer-section social">
@@ -122,11 +67,6 @@
   </div>
 </footer>
 
-
-
-
-
-<!-- Other sections go here -->
 <script src="scripts.js"></script>
 </body>
 </html>
