--- a/weddings.html
+++ b/weddings.html
@@ -6,7 +6,7 @@
     <title>Portfolio - Bell of the Ball</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body data-page-type="balloons">
 
     <nav class="navbar">
         <div class="nav-left">
@@ -20,31 +20,21 @@
             </div>
             <ul class="dropdown-menu">
                 <li><a href="index.html">Landing</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="rentals.html">Rentals</a></li>
+                <li><a href="balloons.html"> Balloons</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
 
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <form id="contact-form" action="send_contact.php" method="post">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
+    <div class="container">
+        <div id="slides" class="slides-container">
+            <div class="nav-button prev" onclick="plusSlides(-1)">&#10094;</div>
+            <div class="nav-button next" onclick="plusSlides(1)">&#10095;</div>
+        </div>
+    </div>
+    
+    
     <footer>
         <div class="footer-content">
           <div class="footer-section about">
@@ -74,7 +64,6 @@
           &copy; 2024 Bell of the Ball | All Rights Reserved
         </div>
       </footer>
-
 
     <script src="scripts.js"></script>
 </body>
