Updated w Pictures, Footer notes, and mroe

--- a/contact.html
+++ b/contact.html
@@ -64,9 +64,9 @@
       
           <div class="footer-section social">
             <h2>Follow Us</h2>
-            <a href="https://www.facebook.com/yourpage" target="_blank"><img src="assets/facebook-icon.png" alt="Facebook"></a>
-            <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
-            <a href="https://www.yelp.com/biz/yourbusiness" target="_blank"><img src="assets/yelp-icon.png" alt="Yelp"></a>
+            <a href="https://www.facebook.com/profile.php?id=100095562942212" target="_blank"><img src="assets/facebook-icon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/belloftheballinc/" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
+            <a href="https://www.yelp.com/biz/bell-of-the-ball-sparks?osq=Bell+of+the+ball&override_cta=Get+information" target="_blank"><img src="assets/yelp-icon.png" alt="Yelp"></a>
           </div>
         </div>
       
