--- a/rentals.html
+++ b/rentals.html
@@ -28,22 +28,29 @@
     </nav>
 
     <section class="rentals">
+        <div class="overlay"></div>
         <div class="rental-grid">
             <a href="images/rentals/snowcone_machine.jpg" class="gallery-item">
                 <img src="images/rentals/snowcone_machine.jpg" alt="Snowcone Machine">
+                <h2 class="rental-title">Snowcone Machine</h2>
             </a>
-            <h2 class="rental-title">Snowcone Machine</h2>
             <a href="images/rentals/cotton_candy_machine.jpg" class="gallery-item">
                 <img src="images/rentals/cotton_candy_machine.jpg" alt="Cotton Candy Machine">
+                <h2 class="rental-title">Cotton Candy Machine</h2>
             </a>
-            <h2 class="rental-title">Cotton Candy Machine</h2>
             <a href="images/rentals/tables_chairs.jpg" class="gallery-item">
                 <img src="images/rentals/tables_chairs.jpg" alt="Tables and Chairs">
+                <h2 class="rental-title">Tables and Chairs</h2>
             </a>
-            <h2 class="rental-title">Tables and Chairs</h2>
             <!-- Add more rental items as needed -->
         </div>
+
+        <div class="ready-to-book">
+            <h2>Ready to Book?</h2>
+            <a href="contact.html" class="book-button">Click Here</a>
+        </div>
     </section>
+
 
     <footer>
         <div class="footer-content">
@@ -58,13 +65,13 @@
                 <h2>Contact Us</h2>
                 <p>Email: belloftheballinc@gmail.com</p>
                 <p>Phone: +1 (775) 203-4065</p>
-                <p>Address: 42 Arndell Way, Sparks NV</p>
+                <p>Address: Sparks NV</p>
             </div>
             <div class="footer-section social">
                 <h2>Follow Us</h2>
-                <a href="https://www.facebook.com/yourpage" target="_blank"><img src="assets/facebook-icon.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.yelp.com/biz/yourbusiness" target="_blank"><img src="assets/yelp-icon.png" alt="Yelp"></a>
+                <a href="https://www.facebook.com/profile.php?id=100095562942212" target="_blank"><img src="assets/facebook-icon.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/belloftheballinc/" target="_blank"><img src="assets/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.yelp.com/biz/bell-of-the-ball-sparks?osq=Bell+of+the+ball&override_cta=Get+information" target="_blank"><img src="assets/yelp-icon.png" alt="Yelp"></a>
             </div>
         </div>
         <div class="footer-bottom">
