--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Bell of the Ball</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("F_zOes2IPaASxIYj2"); // Replace with your EmailJS User ID
+      })();
+    </script>
+
+
+
 </head>
 <body>
 
@@ -27,22 +36,22 @@
     </nav>
 
     <section id="contact">
-        <h2>Contact Us</h2>
-        <form id="contact-form" action="send_contact.php" method="post">
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" required>
-            </div>
-            <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <button type="submit">Send Message</button>
-        </form>
+      <h2>Contact Us</h2>
+      <form id="contact-form" onsubmit="sendEmail(event)">
+          <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required>
+          </div>
+          <div class="form-group">
+              <label for="subject">Subject</label>
+              <input type="text" id="subject" name="subject" required>
+          </div>
+          <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required></textarea>
+          </div>
+          <button type="submit">Send Message</button>
+      </form>
     </section>
 
     <footer>
@@ -59,7 +68,7 @@
             <h2>Contact Us</h2>
             <p>Email: belloftheballinc@gmail.com</p>
             <p>Phone: +1 (775) 203-4065</p>
-            <p>Address: 42 Arndell Way, Sparks NV</p>
+            <p>Address: Sparks NV</p>
           </div>
       
           <div class="footer-section social">
