--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
     <section id="contact">
       <h2>Contact Us</h2>
-      <form id="contact-form" onsubmit="sendEmail(event)">
+      <form id="contact-form" onsubmit="sendMail(event)">
           <div class="form-group">
               <label for="email">Email</label>
               <input type="email" id="email" name="email" required>
@@ -85,6 +85,6 @@
       </footer>
 
 
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
 </body>
 </html>
