--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Bell of the Ball</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
     <script type="text/javascript">
       (function(){
-          emailjs.init("F_zOes2IPaASxIYj2"); // Replace with your EmailJS User ID
+         emailjs.init({
+            publicKey: "F_zOes2IPaASxIYj2",
+         });
       })();
     </script>
 
