Updated with high q pictures

--- a/rentals.html
+++ b/rentals.html
@@ -31,16 +31,20 @@
         <div class="overlay"></div>
         <div class="rental-grid">
             <a href="images/rentals/snowcone_machine.jpg" class="gallery-item">
-                <img src="images/rentals/snowcone_machine.jpg" alt="Snowcone Machine">
                 <h2 class="rental-title">Snowcone Machine</h2>
+                <img src="images/rentals/snowcone_machine.jpg" alt="Snowcone Machine">
             </a>
             <a href="images/rentals/cotton_candy_machine.jpg" class="gallery-item">
-                <img src="images/rentals/cotton_candy_machine.jpg" alt="Cotton Candy Machine">
                 <h2 class="rental-title">Cotton Candy Machine</h2>
+                <img src="images/rentals/cotton_candy_machine.jpg" alt="Cotton Candy Machine">
             </a>
             <a href="images/rentals/tables_chairs.jpg" class="gallery-item">
-                <img src="images/rentals/tables_chairs.jpg" alt="Tables and Chairs">
                 <h2 class="rental-title">Tables and Chairs</h2>
+                <img src="images/rentals/tables_chairs.jpg" alt="Tables and Chairs">
+            </a>
+            <a href="images/rentals/popcorn_machine.jpg" class="gallery-item">
+                <h2 class="rental-title">Popcorn Machine</h2>
+                <img src="images/rentals/popcorn_machine.jpg" alt="Popcorn Machine">
             </a>
             <!-- Add more rental items as needed -->
         </div>
