Almost done! Needs more pictures, but basically almost there

--- a/balloons.html
+++ b/balloons.html
@@ -28,38 +28,45 @@
     </nav>
 
     <section class="portfolio-gallery">
+      <div class="overlay"></div>
       <div class="gallery-grid">
-          <div class="gallery-item">
-              <img src="images/balloons/image_1.jpg" alt="Balloon Image 1">
-          </div>
-          <div class="gallery-item">
-              <img src="images/balloons/image_2.jpg" alt="Balloon Image 2">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_3.jpg" alt="Balloon Image 3">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_4.jpg" alt="Balloon Image 4">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_5.jpg" alt="Balloon Image 5">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_6.jpg" alt="Balloon Image 6">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_7.jpg" alt="Balloon Image 7">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_8.jpg" alt="Balloon Image 8">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_9.jpg" alt="Balloon Image 9">
-          </div>
-          <div class="gallery-item">
-            <img src="images/balloons/image_10.jpg" alt="Balloon Image 10">
-          </div>
+        <a href="images/balloons/image_1.jpg" class="gallery-item">
+          <img src="images/balloons/image_1.jpg" alt="Image 1">
+        </a>
+        <a href="images/balloons/image_2.jpg" class="gallery-item">
+          <img src="images/balloons/image_2.jpg" alt="Image 2">
+        </a>
+        <a href="images/balloons/image_3.jpg" class="gallery-item">
+          <img src="images/balloons/image_3.jpg" alt="Image 3">
+        </a>
+        <a href="images/balloons/image_4.jpg" class="gallery-item">
+          <img src="images/balloons/image_4.jpg" alt="Image 4">
+        </a>
+        <a href="images/balloons/image_5.jpg" class="gallery-item">
+          <img src="images/balloons/image_5.jpg" alt="Image 5">
+        </a>
+        <a href="images/balloons/image_6.jpg" class="gallery-item">
+          <img src="images/balloons/image_6.jpg" alt="Image 6">
+        </a>
+        <a href="images/balloons/image_7.jpg" class="gallery-item">
+          <img src="images/balloons/image_7.jpg" alt="Image 7">
+        </a>
+        <a href="images/balloons/image_8.jpg" class="gallery-item">
+          <img src="images/balloons/image_8.jpg" alt="Image 8">
+        </a>
+        <a href="images/balloons/image_9.jpg" class="gallery-item">
+          <img src="images/balloons/image_9.jpg" alt="Image 9">
+        </a>
+        <a href="images/balloons/image_10.jpg" class="gallery-item">
+          <img src="images/balloons/image_10.jpg" alt="Image 10">
+        </a>
       </div>
+      
+      <div class="ready-to-book">
+        <h2>Ready to book?</h2>
+        <a href="contact.html" class="book-button">Click Here</a>
+      </div>
+
   </section>
 
   <div id="lightbox" class="lightbox">
@@ -67,10 +74,6 @@
     <img class="lightbox-content" id="lightbox-image" src="">
   </div>
 
-  <div class="ready-to-book">
-    <h2>Ready to book?</h2>
-    <a href="contact.html" class="book-button">Click Here</a>
-  </div>
 
 
   
