Updated Pictures, About me, and Contacts!

--- a/rentals.html
+++ b/rentals.html
@@ -61,8 +61,7 @@
             <div class="footer-section about">
                 <h2>About Us</h2>
                 <p>
-                    Bell of the Ball is dedicated to creating unforgettable events with style and elegance. 
-                    We handle everything from weddings to corporate events, ensuring a perfect experience every time.
+                    We are a full service event planning service, including Officiant, Notary, Bounce House, Balloon Art, Custom Wearables, Cotton Candy and Snow Cone Machine Rentals, Tables and Chairs and So Much More! We Love to Party
                 </p>
             </div>
             <div class="footer-section contact">
